Marked com.sun.org.apache.xml.internal.resolver and com.sun.org.apache.xml.internal.resolver.tools as optional. They are part of JDK.
Signed-off-by: Martin Vojtek <martin.vojtek@oracle.com>

--- a/jaxb-ri/bundles/xjc/pom.xml
+++ b/jaxb-ri/bundles/xjc/pom.xml
@@ -288,6 +288,7 @@ holder.
                         <configuration>
                             <instructions>
                                 <Export-Package>*</Export-Package>
+                                <Import-Package>*, com.sun.org.apache.xml.internal.resolver;resolution:=optional,com.sun.org.apache.xml.internal.resolver.tools;resolution:=optional</Import-Package>
                             </instructions>
                         </configuration>
                     </execution>
