--- a/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/generator/bean/MessageBundle.properties
+++ b/jaxb-ri/xjc/src/main/resources/com/sun/tools/xjc/generator/bean/MessageBundle.properties
@@ -1,7 +1,7 @@
 #
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -41,7 +41,7 @@
 METHOD_COLLISION = \
 	The "{0}" method is defined on both "{1}" and "{2}" and is causing a collision.
 
-# {0} - enumeration constant value (but something that couldn‘t be translated to a valid java identifier e.g. starting special character, number, ..)    e.g. Cannot derive a valid Java identifier from "5.6.0". Specify a customization to change the name.
+# {0} - enumeration constant value (but something that couldn't be translated to a valid java identifier e.g. starting special character, number, ..)    e.g. Cannot derive a valid Java identifier from "5.6.0". Specify a customization to change the name.
 ERR_UNUSABLE_NAME = \
 	Cannot derive a valid Java identifier from "{0}". Specify a customization to change the name.
 
