--- a/jaxb-ri/bundles/osgi/tests/pom.xml
+++ b/jaxb-ri/bundles/osgi/tests/pom.xml
@@ -52,11 +52,10 @@ holder.
 
     <artifactId>tests</artifactId>
     <name>JAXB OSGi Tests</name>
-    <description>Tests for JAXB RI OSGi bundles</description>
-
-    <properties>
-        <exam.version>3.0.0.M3</exam.version>
-    </properties>
+    <description>
+        Tests for JAXB RI OSGi bundles.
+        They should be in separate module because of dependency-hell of osgi and extra-osgi modules.
+    </description>
 
     <dependencies>
         <dependency>
@@ -67,114 +66,104 @@ holder.
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-extra-osgi</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <version>4.2.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>2.1.64</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-container-paxrunner</artifactId>
-            <version>${exam.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.ops4j.base</groupId>
-                    <artifactId>ops4j-base-store</artifactId>
-                </exclusion>
-            </exclusions>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.base</groupId>
-            <artifactId>ops4j-base-store</artifactId>
-            <version>1.3.0</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.runner</groupId>
-            <artifactId>pax-runner-no-jcl</artifactId>
-            <version>1.7.6</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-junit4</artifactId>
-            <version>${exam.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-link-mvn</artifactId>
-            <version>${exam.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>0.9.29</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>0.9.29</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>default-profile</id>
+            <activation>
+                <property>
+                    <name>!dev</name>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>org.osgi.core</artifactId>
+                    <version>${felix.osgi.core}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>osgi-test-osgi</artifactId>
+                    <version>${project.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>osgi-test-extra_osgi</artifactId>
+                    <version>${project.version}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>osgi-test-parent</artifactId>
+                    <version>${project.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-junit4osgi-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>prepare-osgi-bundles</id>
-                        <phase>generate-test-resources</phase>
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>test</goal>
                         </goals>
+                        <phase>integration-test</phase>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/testedBundles</outputDirectory>
-                            <stripVersion>true</stripVersion>
-                            <includeArtifactIds>jaxb-osgi,jaxb-extra-osgi</includeArtifactIds>
+                            <skip>${skipOsgiTests}</skip>
+                            <m_deployProjectArtifact>true</m_deployProjectArtifact>
+                            <configuration>
+                                <org.osgi.framework.system.packages.extra>
+                                    javax.xml,
+                                    javax.xml.stream,
+                                    javax.lang.model.util,
+                                    org.xml.sax.ext,
+                                    javax.lang.model.type,
+                                    javax.lang.model,
+                                    javax.xml.bind.annotation,
+                                    javax.xml.bind.helpers,
+                                    javax.xml.bind,
+                                    org.xml.sax.helpers,
+                                    javax.xml.transform.dom,
+                                    javax.annotation.processing,
+                                    javax.xml.transform.dom,
+                                    javax.xml.validation,
+                                    javax.xml.namespace,
+                                    javax.xml.bind.annotation.adapters,
+                                    com.sun.source.tree,
+                                    org.w3c.dom,
+                                    javax.lang.model.element,
+                                    javax.imageio.stream,
+                                    org.xml.sax,
+                                    javax.xml.stream.util,
+                                    javax.xml.transform.sax,
+                                    javax.activation,
+                                    javax.tools,
+                                    javax.xml.parsers,
+                                    javax.imageio,
+                                    javax.xml.transform,
+                                    javax.swing.border,
+                                    javax.xml.xpath,
+                                    javax.swing.tree,
+                                    javax.xml.transform.stream,
+                                    org.w3c.dom.ls,
+                                    javax.xml.datatype,
+                                    javax.swing,
+                                    javax.xml.stream.events,
+                                    com.sun.source.util,
+                                    javax.xml.bind.attachment
+                                </org.osgi.framework.system.packages.extra>
+                            </configuration>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
-                <configuration>
-                    <systemProperties>
-                        <jaxb.spec.version>${jaxb-api.version}</jaxb.spec.version>
-                        <jaxb.impl.version>${project.version}</jaxb.impl.version>
-                        <osgi.dist>${project.build.directory}/testedBundles</osgi.dist>
-                    </systemProperties>
-                </configuration>
             </plugin>
         </plugins>
     </build>
