enforcer plugin, requireReleaseDeps and requireReleaseVersion for release-profile

--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -609,6 +609,30 @@ holder.
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>1.4</version>
+                        <executions>
+                          <execution>
+                            <id>enforce-no-snapshots</id>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                            <configuration>
+                                <rules>
+                                    <requireReleaseDeps>
+                                        <message>No SNAPSHOT dependency allowed!</message>
+                                    </requireReleaseDeps>
+                                    <requireReleaseVersion>
+                                        <message>release version no SNAPSHOT Allowed!</message>
+                                    </requireReleaseVersion>
+                                </rules>
+                                <fail>true</fail>
+                            </configuration>
+                          </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <artifactId>maven-site-plugin</artifactId>
                         <configuration>
                             <skipDeploy>true</skipDeploy>
