xsom sources imported into jaxb-ri workspace; adding module to main pom

--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -551,6 +551,7 @@ holder.
         <module>xjc</module>
         <module>jxc</module>
         <module>bundles</module>
+        <module>xsom</module>
     </modules>
 
     <profiles>
