Upgrade findbugs version. Fix maven version properties.

--- a/jaxb-ri/bundles/jxc/pom.xml
+++ b/jaxb-ri/bundles/jxc/pom.xml
@@ -113,6 +113,7 @@ holder.
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-junit4osgi-plugin</artifactId>
+                <version>${felix.junit4osgi}</version>
                 <executions>
                     <execution>
                         <goals>
