--- a/jaxb-ri/bundles/xjc/pom.xml
+++ b/jaxb-ri/bundles/xjc/pom.xml
@@ -140,7 +140,7 @@ holder.
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-junit4osgi-plugin</artifactId>
-                <version>1.0.0</version>
+                <version>${felix.junit4osgi}</version>
                 <executions>
                     <execution>
                         <goals>
