Fix findbugs errors
Signed-off-by: Iaroslav Savytskyi <iaroslav.savytskyi@oracle.com>

--- a/jaxb-ri/xsom/pom.xml
+++ b/jaxb-ri/xsom/pom.xml
@@ -84,6 +84,11 @@
             <email>valikov@gmx.net</email>
         </developer>
     </developers>
+
+    <properties>
+        <findbugs.exclude>${project.basedir}/exclude-xsom.xml</findbugs.exclude>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>relaxngDatatype</groupId>
